[gd_scene load_steps=4 format=3 uid="uid://cwhulrkntobc1"]

[ext_resource type="Script" path="res://scenes/scoreboard.gd" id="1_omeh1"]
[ext_resource type="Texture2D" uid="uid://bijup3qa1ywag" path="res://darkness_arisen.png" id="2_3xp1b"]
[ext_resource type="FontFile" uid="uid://d25arwb2y148n" path="res://brackeys_platformer_assets/fonts/PixelOperator8.ttf" id="3_r2ddg"]

[node name="Scoreboard" type="Node2D"]
script = ExtResource("1_omeh1")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(1, -2)
scale = Vector2(0.281829, 0.281829)
texture = ExtResource("2_3xp1b")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(4, 4)

[node name="Label" type="Label" parent="."]
offset_left = -66.0
offset_top = -78.0
offset_right = 68.0
offset_bottom = -55.0
theme_override_fonts/font = ExtResource("3_r2ddg")
theme_override_font_sizes/font_size = 16
text = "TOP SCORES"

[node name="First_place" type="Label" parent="."]
offset_left = -63.0
offset_top = -50.0
offset_right = 74.0
offset_bottom = -27.0
theme_override_fonts/font = ExtResource("3_r2ddg")
theme_override_font_sizes/font_size = 8
text = "1: Place Holder Score:"

[node name="Second_place" type="Label" parent="."]
offset_left = -63.0
offset_top = -30.0
offset_right = 74.0
offset_bottom = -7.0
theme_override_fonts/font = ExtResource("3_r2ddg")
theme_override_font_sizes/font_size = 8
text = "2: Place Holder Score:"

[node name="Fourth_place2" type="Label" parent="."]
offset_left = -61.0
offset_top = 26.0
offset_right = 76.0
offset_bottom = 49.0
theme_override_fonts/font = ExtResource("3_r2ddg")
theme_override_font_sizes/font_size = 8
text = "5: Place Holder Score:"

[node name="Third_place" type="Label" parent="."]
offset_left = -63.0
offset_top = -13.0
offset_right = 74.0
offset_bottom = 10.0
theme_override_fonts/font = ExtResource("3_r2ddg")
theme_override_font_sizes/font_size = 8
text = "3: Place Holder Score:"

[node name="Fourth_place" type="Label" parent="."]
offset_left = -62.0
offset_top = 7.0
offset_right = 75.0
offset_bottom = 30.0
theme_override_fonts/font = ExtResource("3_r2ddg")
theme_override_font_sizes/font_size = 8
text = "4: Place Holder Score:"

[node name="Button" type="Button" parent="."]
offset_left = -45.0
offset_top = 47.0
offset_right = 43.0
offset_bottom = 63.0
theme_override_fonts/font = ExtResource("3_r2ddg")
theme_override_font_sizes/font_size = 8
text = "Go Back Home"

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
